# fl-darkbot

./: .coveragerc  .dockerignore  .env.dev.example  .env.example  .gitattributes  .gitignore  .gitlab-ci.yml  .settings.example.yml  Dockerfile  LICENSE  README.darkbot3.tech.md  README.dev.md  README.md  README.refactor.md  Taskfile.yml  app.py  autogit.yml  build.sh  channel.py  channels.json  commands.py  constraints.txt  date.md  docker-compose.configurator.yml  docker-compose.discorder-integration.yml  docker-compose.discorder.yml  docker-compose.listener.yml  docker-compose.pgadmin.yml  docker-compose.scrappy.yml  docker-compose.shared.yml  docker-compose.viewer.yml  docker-compose.yml  dockerfile  forum_parser.py  go.mod  go.sum  info_controller.py  init.sh  looper.py  main.go  (+14 more)
OLD_CODE/: .coveragerc  .dockerignore  .gitignore  README.md  build.sh  docker-compose.yml  dockerfile  mypy.ini  pytest.ini  requirements.txt
OLD_CODE2/: .dockerignore  .gitignore  LICENSE  docker-compose.discorder.yml  docker-compose.listener.yml  docker-compose.network-override.yml  docker-compose.scrappy.yml  make.py  mypy.ini
api/: api.go  api_test.go
architecture/: .$architecture.drawio.svg.bkp
backups/: 221601_1953_channels.json
cmd/: check.go  migrate.go  root.go  run.go  scrappy.go
commands/: __init__.py  base.py  consts.py  enemy.py  forum.py  friend.py  region.py  root.py  system.py  universal.py  unrecognized.py
configurator/: actions.go  actions_test.go  alembic.ini  alerts.go  alerts_test.go  base.go  base_test.go  channel.go  channel_test.go  conftest.py  errors.go  (+10 more)
(+735 files in other folders)
