[tool.poetry]
name = "darklab-darkbot"
version = "0.1.0"
description = "Documentation to discord bot Darkbot"
authors = ["Your Name <dark.dreamflyer@gmail.com>"]
license = "GPL3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.4.2"
pymdown-extensions = "^9.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
